--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.11",
     "npm-install": "0.0.1",
     "react": "^16.8.4",
     "react-browser-router": "^2.1.2",
