--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/lab": "^3.0.0-alpha.30",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "jsonwebtoken": "^8.5.1",
@@ -13,6 +14,7 @@
     "react": "^16.8.4",
     "react-browser-router": "^2.1.2",
     "react-dom": "^16.8.4",
+    "react-easy-crop": "^1.10.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "reactstrap": "^7.1.0"
@@ -36,6 +38,6 @@
   "devDependencies": {
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.11"
   }
 }
