--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "npm-install": "0.0.1",
     "react": "^16.8.4",
     "react-browser-router": "^2.1.2",
+    "react-cropper": "^1.2.0",
     "react-dom": "^16.8.4",
     "react-easy-crop": "^1.10.0",
     "react-router-dom": "^4.3.1",
