--- a/package.json
+++ b/package.json
@@ -1,25 +1,8 @@
 {
-  "name": "fundoo",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.2",
-    "@material-ui/lab": "^3.0.0-alpha.30",
-    "axios": "^0.18.0",
-    "bootstrap": "^4.3.1",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.11",
-    "npm-install": "0.0.1",
-    "react": "^16.8.6",
-    "react-browser-router": "^2.1.2",
-    "react-cropper": "^1.2.0",
-    "react-dom": "^16.8.6",
-    "react-easy-crop": "^1.10.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.8",
-    "reactstrap": "^7.1.0"
-  },
+  "name": "client",
+  "version": "1.0.0",
+  "description": "fundoo",
+  "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -36,9 +19,33 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/prashi19/fundoo_Clients.git"
+  },
+  "author": "prashanth",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/prashi19/fundoo_Clients/issues"
+  },
+  "homepage": "https://github.com/prashi19/fundoo_Clients#readme",
+  "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/lab": "^3.0.0-alpha.30",
+    "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
+    "dev": "^0.1.3",
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.11.2",
-    "nodemon": "^1.18.11"
+    "enzyme-adapter-react-16": "^1.12.1",
+    "jsonwebtoken": "^8.5.1",
+    "react": "^16.8.6",
+    "react-browser-router": "^2.1.2",
+    "react-cropper": "^1.2.0",
+    "react-dom": "^16.8.6",
+    "react-easy-crop": "^1.10.0",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "^2.1.8",
+    "reactstrap": "^8.0.0"
   }
 }
