--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dev": "^0.1.3",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
+    "firebase": "^5.10.0",
     "jsonwebtoken": "^8.5.1",
     "react": "^16.8.6",
     "react-browser-router": "^2.1.2",
